tests/compile-fail/duplicate_guard.stderr
error: Guard `guard` can only be reused when all input states and events have the same data
  --> tests/compile-fail/duplicate_guard.rs:3:1
   |
3  | / statemachine! {
4  | |     transitions: {
5  | |         *Init + Event [guard] / action = State1(u32),
...  |
10 | |     }
11 | | }
   | |_^
   |
   = note: this error originates in the macro `statemachine` (in Nightly builds, run with -Z macro-backtrace for more info)
